--- a/app/src/main/res/layout/activity_view_rodents.xml
+++ b/app/src/main/res/layout/activity_view_rodents.xml
@@ -13,6 +13,18 @@
         android:background="#85C1C3"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/textViewEmpty_rodent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginRight="30dp"
+            android:gravity="center"
+            android:text="Nie ma żadnych pozycji w bazie danych. Aby dodać pupila, kliknij przycisk z plusikiem na górze ekranu."
+            android:textSize="26sp"
+            android:visibility="gone" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewRodents"
             android:layout_width="match_parent"
@@ -55,7 +67,7 @@
                 android:padding="15dp"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_chinchilla"
-                app:tint="#0A4A97" />
+                app:tint="#FFFFF1" />
 
             <ImageButton
                 android:id="@+id/imageButton"
@@ -71,7 +83,7 @@
                 android:padding="15dp"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_map"
-                app:tint="#FFFFFF" />
+                app:tint="#0A4A97" />
 
             <ImageButton
                 android:id="@+id/imageButtonVet"
@@ -89,7 +101,7 @@
                 android:padding="15dp"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_vet"
-                app:tint="#FFFFFF" />
+                app:tint="#0A4A97" />
 
             <ImageButton
                 android:id="@+id/imageButton4"
@@ -105,7 +117,7 @@
                 android:padding="15dp"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/ic_medicine"
-                app:tint="#FFFFFF" />
+                app:tint="#0A4A97" />
 
         </LinearLayout>
 
